# jobwatch

./: .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  config.development.toml  config.example.toml  config.test.toml  config.toml  conftest.py  docker-compose.yml  pyproject.toml
.claude/skills/cleanup/: SKILL.md
.claude/skills/migrations/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
src/jobwatch/: __main__.py  assess.py  assess_test.py  cli.py  config.py  criteria.py  db.py  llm.py  llm_test.py  models.py  notify.py  notify_test.py  pipeline.py  pipeline_test.py  rate_limit.py  rate_limit_test.py  scraper.py  search_jobs.py  searches.py  searches_test.py  task_kinds.py  tasks.py  tasks_test.py  test_scene.py  typing.py  user_state.py
src/jobwatch/job_sources/: __init__.py  base.py  linkedin.py  linkedin_test.py
src/jobwatch/llm/: __init__.py  anthropic.py  apple_fm.py  gemini.py  gemini_test.py  ollama.py
src/jobwatch/migrations/: env.py
src/jobwatch/migrations/versions/: 0001_add_invalidated_at_to_assessments.py  0001_baseline.py  0002_add_invalidated_at_to_assessments.py  0002_drop_criteria_fingerprint.py  0003_move_searches_into_settings.py  0004_rescale_scores_to_five_stars.py  0005_add_user_job_state.py  0005_drop_matched_from_assessments.py  0716795b7fd1_rename_unique_constraints_to_default_.py  0966d42483b3_add_more_assessment_info.py  289481da817e_add_linkedin_slug_to_company_details.py  296bab0d47be_drop_company_name_unique.py  41bfa88e89b6_add_user_id_to_user_searches.py  4c7cca7a8f81_create_user_searches.py  5ce6aa568eb3_create_users.py  6628cf6ea000_make_columns_notnull.py  6d0023ea9a19_create_company_details.py  97f6c0b8c574_add_linkedin_slug_to_company_details.py  a36c95f917fe_baseline.py  d7ae67786212_add_company_id_to_jobs.py  f46b5aaae86e_move_criteria_to_users.py  f75ac168dbd0_soft_delete_user_search.py
src/jobwatch/pipeline/: assess.py  assess_test.py  conftest.py  notify.py  notify_test.py  sync_companies.py  sync_companies_test.py  sync_jobs.py  sync_jobs_test.py
src/jobwatch/web/: app.py  app_test.py
src/jobwatch/web/templates/: _macros.html  base.html  base_anonymous.html  criteria.html  job.html  jobs.html  settings.html  users.html
src/static/: app.css
tests/: conftest.py  test_config.py  test_pipeline.py  test_web.py
