[project]
name = "jobwatch"
version = "0.1.0"
description = "Scrape LinkedIn job postings, assess them against your criteria with an LLM, and get notified about matches"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "click>=8.1",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.0",
    "python-jobspy>=1.1.82",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
jobwatch = "jobwatch.cli:app"

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.116.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "ty>=0.0.57",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["src"]
